# chef_gpt

./: .env  README.md  app.py  ingredient_parser.py  main.py  pyproject.toml  recipe_extractor.ipynb  side.html  testgpt.py  translator.py
utils/: __init__.py  chat_completion.py  data_parser.py  data_parserrrr.py  kickoff.py
