[project]
name = "chef-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "jy"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "groq (>=0.21.0,<0.22.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
