[tool.poetry]
name = "chef-gpt"
version = "0.1.0"
description = ""
authors = ["jy"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "^3.1.0"
python = ">=3.11,<4.0"
flask-cors = "^5.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
groq = "^0.21.0"
python-dotenv = "^1.1.0"
tenacity = "^9.1.2"
pydantic = "^2.11.1"
langchain-text-splitters = "^0.3.8"
selenium = "^4.31.0"
webdriver-manager = "^4.0.2"
cloudscraper = "^1.2.71"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
